# AdventOfCode2020

./: .gitignore  CMakeLists.txt
source/app/: Day1.cpp  Day1.h  Day2.cpp  Day2.h  IDay.h  PythonInclude.h  app.cpp  test.py
source/module/: module.cpp
